fix hidden scrollbar in firefox and remove banana :(

--- a/ta.css
+++ b/ta.css
@@ -106,7 +106,6 @@ body {
     line-height: 1.4285em !important;
     color: rgba(0, 0, 0, 255);
     text-shadow: black 0 0 0;
-    overflow-y: scroll;
 }
 
 .main {
@@ -115,6 +114,7 @@ body {
     height: 100%;
     overflow-x: hidden;
     padding-bottom: 30px;
+    scrollbar-width: none;
 }
 
 .main::before {
@@ -297,15 +297,6 @@ audio {
     animation: eating 0.3s ease-in alternate infinite;
 }
 
-.banana {
-    position: absolute;
-    width: 30px;
-    height: 50px;
-    right: 0;
-    bottom: 0;
-    margin-bottom: 30px;
-}
-
 @keyframes eating {
     0% {
         background: conic-gradient(yellow 0, yellow 17.5%, transparent 17.5%, transparent 32.5%, yellow 32.5%);
@@ -334,6 +325,7 @@ audio {
 }
 
 ::-webkit-scrollbar {
+    display: none;
     width: 0;  /* Remove scrollbar space */
     background: transparent;  /* Optional: just make scrollbar invisible */
 }
